Fix CMake install bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,9 +82,10 @@ set_target_properties(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX d)
 # Configure dependency #
 ########################
 
+set(CONFIG_HEADER_PATH ${CMAKE_CURRENT_BINARY_DIR}/include/kbdt/config.hpp)
 configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake/templates/config.hpp.in
-    ${CMAKE_CURRENT_BINARY_DIR}/include/kbdt/config.hpp
+    ${CONFIG_HEADER_PATH}
 )
 
 include(GNUInstallDirs)
@@ -147,7 +148,7 @@ file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/kbdt/*.hpp)
 if(NOT KBDT_WITH_KEYUTILS)
     list(FILTER HEADERS EXCLUDE REGEX ".*keyutils\.hpp")
 endif()
-list(APPEND HEADERS ${CMAKE_CURRENT_BINARY_DIR}/include/config.hpp)
+list(APPEND HEADERS ${CONFIG_HEADER_PATH})
 install(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/kbdt)
 install(FILES LICENSE DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/licenses/${PROJECT_NAME})
 
