--- a/cmake/templates/config.hpp.in
+++ b/cmake/templates/config.hpp.in
@@ -2,9 +2,9 @@
 #define KEYBOARD_TOOLS_CONFIG_HPP
 
 #define KEYBOARD_TOOLS_VERSION "@PROJECT_VERSION@"
-#define KEYBOARD_TOOLS_VERSION_MAJOR "@PROJECT_VERSION_MAJOR@"
-#define KEYBOARD_TOOLS_VERSION_MINOR "@PROJECT_VERSION_MINOR@"
-#define KEYBOARD_TOOLS_VERSION_PATCH "@PROJECT_VERSION_PATCH@"
+#define KEYBOARD_TOOLS_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
+#define KEYBOARD_TOOLS_VERSION_MINOR @PROJECT_VERSION_MINOR@
+#define KEYBOARD_TOOLS_VERSION_PATCH @PROJECT_VERSION_PATCH@
 #cmakedefine KEYBOARD_TOOLS_SHARED
 #cmakedefine KEYBOARD_TOOLS_WITH_KEYUTILS
 
