--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,15 +38,15 @@ elseif(LINUX)
     file(GLOB SRC ${SRC} ${CMAKE_CURRENT_SOURCE_DIR}/src/linux/*.cpp)
 endif()
 
-option(KEYBOARD_TOOLS_WITH_KEYUTILS "Build with key utilitys" ON)
-if(KEYBOARD_TOOLS_WITH_KEYUTILS)
-    list(APPEND SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/key_utilitys/key_utilitys.cpp)
+option(KEYBOARD_TOOLS_WITH_KEYUTIL "Build with key utility" ON)
+if(KEYBOARD_TOOLS_WITH_KEYUTIL)
+    list(APPEND SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/key_utility/key_utility.cpp)
     if(WIN32)
-        list(APPEND SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/key_utilitys/key_utilitys_win.cpp)
+        list(APPEND SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/key_utility/key_utility_win.cpp)
     elseif(APPLE)
-        list(APPEND SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/key_utilitys/key_utilitys_mac.cpp)
+        list(APPEND SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/key_utility/key_utility_mac.cpp)
     elseif(LINUX)
-        list(APPEND SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/key_utilitys/key_utilitys_linux.cpp)
+        list(APPEND SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/key_utility/key_utility_linux.cpp)
     endif()
 endif()
 
@@ -146,8 +146,8 @@ install(
 )
 
 file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/keyboard_tools/*.hpp)
-if(NOT KEYBOARD_TOOLS_WITH_KEYUTILS)
-    list(FILTER HEADERS EXCLUDE REGEX ".*key_utilitys\.hpp")
+if(NOT KEYBOARD_TOOLS_WITH_KEYUTIL)
+    list(FILTER HEADERS EXCLUDE REGEX ".*key_utility\.hpp")
 endif()
 list(APPEND HEADERS ${CONFIG_HEADER_PATH})
 install(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/keyboard_tools)
