--- a/example/remap_key/CMakeLists.txt
+++ b/example/remap_key/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required(VERSION 3.25)
-project(echo LANGUAGES CXX)
+project(remap_key LANGUAGES CXX)
 add_executable(${PROJECT_NAME} main.cpp)
